kubernetes/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: acrmfolabsform.azurecr.io/matthieuf/pubsub-api:1.3
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          volumeMounts:
            - mountPath: "/var/lib/rabbitmq"
              name: volume
              readOnly: false
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "pubsub-keyvault"
